namespaces/live.cloud-platform.service.justice.gov.uk/justice-person-platform-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "justice-person-platform-preprod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "pre-production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: ""
    cloud-platform.justice.gov.uk/application: "Justice Person Platform"
    cloud-platform.justice.gov.uk/owner: "Oscar Hardy: Oscar.Hardy@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/justice-person-platform"
    cloud-platform.justice.gov.uk/team-name: "justice-id"
    cloud-platform.justice.gov.uk/review-after: ""
